--- a/scripts/global.config
+++ b/scripts/global.config
@@ -1,12 +1,18 @@
 {
-    "engine_logger" => ['./persist_logger', 'Ruote::PersistLogger'],
+    "engine_logger" => {
+        "persist_logger" => {
+            "name" => "persist_logger",
+            "path" => "./persist_logger.rb", 
+            "class" => "Ruote::PersistLogger",
+        },
+    },
 
     "amqp" => {
-              "host" => "amqpvm",
-              "user" => "ruote",
-              "pass" => "ruote",
-              "vhost" => "ruote-test"
-            },
+        "host" => "amqpvm",
+        "user" => "ruote",
+        "pass" => "ruote",
+        "vhost" => "ruote-test"
+    },
 
     "participant" => {
         "sizer" => {
