--- a/test_cases/case_001.config
+++ b/test_cases/case_001.config
@@ -7,13 +7,5 @@
     "extra_worker" => 1, #engine
     "storage" => "FS", #engine & global config [reference to global config for detail]
     "participant" => ["sizer", "resizer"],
-    "workflow" => """
-            Ruote.process_definition :name => 'test_sequence' do
-                sequence do
-                    sizer
-                    resizer
-                end
-            end
-        """, #client
-    "output" => "./tmp", #engine, logger, analyze
+    "workflow" => "workflow_simple.config", #client
 }
