fix multiple channel issue

--- a/test_cases/case_001.config
+++ b/test_cases/case_001.config
@@ -1,9 +1,9 @@
 {
     "name" => "This case is just for developing work",
     "desc" => "to comments",
-    "channel" => "single",  #client
-    "load" => 2,  #client
-    "iteration" => 1,  #client
+    "channel" => "multiple",  #client
+    "load" => 1000,  #client
+    "iteration" => 10,  #client
     "extra_worker" => 1, #engine
     "storage" => "FS", #engine & global config [reference to global config for detail]
     "participant" => ["sizer", "resizer"],
