--- a/test_cases/case_001.config
+++ b/test_cases/case_001.config
@@ -4,6 +4,7 @@
     "channel" => "multiple",  #client
     "load" => 2,  #client
     "iteration" => 1,  #client
+    "iteration_timeout" => 1, #client minutes
     "extra_worker" => 1, #engine
     "storage" => "FS", #engine & global config [reference to global config for detail]
     "participant" => ["sizer", "resizer"],
