--- a/test_cases/case_001.config
+++ b/test_cases/case_001.config
@@ -1,12 +1,50 @@
 {
-    "name" => "This case is just for developing work",
-    "desc" => "to comments",
-    "channel" => "multiple",  #client
-    "load" => 2,  #client
-    "iteration" => 1,  #client
-    "iteration_timeout" => 1, #client minutes
-    "extra_worker" => 1, #engine
-    "storage" => "FS", #engine & global config [reference to global config for detail]
+  "case001" => {
+    "name" => "case_001",
+    "desc" => "This case is testing single channel",
+    "channel" => "single",
+    "load" => 10,
+    "iteration" => 1,
+    "iteration_timeout" => 1,
+    "extra_worker" => 1,
+    "storage" => "FS",
     "participant" => ["sizer", "resizer"],
-    "workflow" => "workflow_simple.config", #client
+    "workflow" => "../test_cases/workflow_simple.config"
+  },
+  "case002" => {
+    "name" => "case_002",
+    "desc" => "This case is testing multiple channel",
+    "channel" => "multiple",
+    "load" => 10,  
+    "iteration" => 1,
+    "iteration_timeout" => 1, 
+    "extra_worker" => 1, #engine
+    "storage" => "FS",
+    "participant" => ["sizer", "resizer"],
+    "workflow" => "../test_cases/workflow_simple.config"
+  },
+  "case003" => {
+    "name" => "case_003",
+    "desc" => "This case is testing one worker at the same time",
+    "channel" => "multiple",
+    "load" => 10,
+    "iteration" => 1,
+    "iteration_timeout" => 1,
+    "extra_worker" => 1,
+    "storage" => "FS", 
+    "participant" => ["sizer", "resizer"],
+    "workflow" => "../test_cases/workflow_simple.config"
+  },
+  "case004" => {
+    "name" => "case_004",
+    "desc" => "This case is testing five workers at the same time",
+    "channel" => "multiple",
+    "load" => 10,
+    "iteration" => 1,
+    "iteration_timeout" => 1,
+    "extra_worker" => 5,
+    "storage" => "FS",
+    "participant" => ["sizer", "resizer"],
+    "workflow" => "../test_cases/workflow_simple.config"
+  }
 }
