dynamic load participants

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -14,16 +14,16 @@
 
     "participant" => {
         "sizer" => {
-            "name" => "sizer", 
-            "path" => "./participant_sizer.py", 
-            "class" => "RuoteAMQP::Participant", 
+            "file" => "sizer.py", 
+            "class" => "Sizer", 
+            "type" => "RuoteAMQP::Participant",
             "command" => "/not/user", 
             "queue" => "sizer"
         },
         "resizer" => {
-            "name" => "resizer", 
-            "path" => "./participant_resizer.py", 
-            "class" => "RuoteAMQP::Participant", 
+            "file" => "resizer.py", 
+            "class" => "Resizer", 
+            "type" => "RuoteAMQP::Participant",
             "command" => "/not/user", 
             "queue" => "resizer"
         },
