change workflow location, enable local worker

--- a/scripts/global.config
+++ b/scripts/global.config
@@ -16,34 +16,28 @@
         "sizer" => {
             "file" => "sizer.py", 
             "class" => "Sizer", 
-            "type" => "RuoteAMQP::Participant",
+            "type" => "remote",
             "command" => "/not/user", 
             "queue" => "sizer"
         },
         "resizer" => {
             "file" => "resizer.py", 
             "class" => "Resizer", 
-            "type" => "RuoteAMQP::Participant",
+            "type" => "remote",
             "command" => "/not/user", 
             "queue" => "resizer"
+        },
+        "error_handler" => {
+            "file" => "error_handler.rb", 
+            "class" => "ErrorHandler", 
+            "type" => "local",
         },
     },
 
     "storage" => {
         "fs" => {
             "name" => "fs", 
-            "class" => "Ruote::FsStorage"
-        },
-        "hs" => {
-            "name" => "hs", 
-            "class" => "Ruote::FsStorage"
-        },
-        "dbs" => {
-            "name" => "dbs", 
-            "class" => "Ruote::FsStorage"
-        },
-        "ms" => {
-            "name" => "ms", 
+            "file" => "ruote/storage/fs_storage.rb",
             "class" => "Ruote::FsStorage"
         },
     },
