--- a/test_cases/case_001.config
+++ b/test_cases/case_001.config
@@ -8,5 +8,5 @@
     "extra_worker" => 1,
     "storage" => "FS",
     "participant" => ["sizer", "resizer"],
-    "workflow" => "../test_cases/workflow_simple.config"
+    "workflow" => "workflow_simple.config"
 }
