--- a/scripts/workflows/workflow_simple.config
+++ b/scripts/workflows/workflow_simple.config
@@ -1,6 +1,7 @@
 Ruote.process_definition :name => 'test_sequence' do
     sequence do
-        sizer
-        resizer
+        pilot
+	# add your participants here
+        pilot
     end
 end
